# MedianaBox

./: .travis.yml  CMakeLists.txt  README.md  codecov.yml  example.data  main.cpp
containers/include/: ISimpleContainer.hpp  ISimpleVec.hpp  SimpleVec.hpp
containers/src/: CMakeLists.txt  SimpleVec.cpp
core/include/: Calculator.hpp  ICalulator.hpp
core/src/: CMakeLists.txt  Calculator.cpp
include/: Calculator.hpp  ICalulator.hpp
src/: Calculator.cpp
test/: CMakeLists.txt
test/testTmp/: CMakeLists.txt  TestTmp.cpp  TestTmp.hpp
tests/: CMakeLists.txt
tests/testCalculator/: CMakeLists.txt  TestCalculator.cpp  TestCalculator.hpp  testSimple.data
tests/testSimpleVec/: CMakeLists.txt  TestSimpleVec.cpp  TestSimpleVec.hpp
